# coursework

./: exam-two  exam_one.rkt  exam_os.c  minesweeper.java
software_engineering/: Makefile  conftest.py  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt
software_engineering/Fish/: self-1.md
software_engineering/Fish/Admin/: abstract_observer.py  game-visualizer.py  manager-interface.py  manager.py  referee.py  tournament_visualizer.py
software_engineering/Fish/Common/: drawboard.py  game_tree.py  gameboard.py  player-interface.py  state.py
software_engineering/Fish/Other/: coords.py
software_engineering/Fish/Other/admin/: conftest.py  test_referee.py  test_referee_flow_harder.py  test_referee_more.py  test_referee_placement_and_gameover.py  test_referee_skip_and_eliminate.py  test_referee_small_board_gameover.py  test_referee_tree_and_apply.py  test_referee_tree_apply.py
software_engineering/Fish/Other/coords/: test_coords_basic.py  test_coords_comprehensive.py  test_coords_dh_band_walk.py
software_engineering/Fish/Other/drawboard/: conftest.py  test_keyboard.py  test_mouse_interactions.py  test_painting.py
software_engineering/Fish/Other/gameboard/: conftest.py  test_gameboard_edge_cases.py  test_reachability.py
software_engineering/Fish/Planning/: game-state.md  games.md  manager-interface.md  player-protocol.md  referee.md  remote.md
software_engineering/Fish/Player/: human-player.py  player.py  strategy.py
software_engineering/Fish/Remote/: README.md  client.py  remote_observer.py  remote_player.py  server.py
web/: index.html  (+1 more)
(+44 files in other folders)
